--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -116,4 +116,13 @@ dependencies {
     }
 }
 
+// ---------------------------------------------------------------- //
+// TAMBAHKAN KODE BERIKUT DI SINI
+// ---------------------------------------------------------------- //
+apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
+
+
+// ---------------------------------------------------------------- //
+// JANGAN UBAH KODE DI BAWAH INI
+// ---------------------------------------------------------------- //
 apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
