--- a/package.json
+++ b/package.json
@@ -10,8 +10,16 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/native": "^7.1.17",
+    "@react-navigation/native-stack": "^7.3.25",
+    "axios": "^1.12.1",
     "react": "18.2.0",
-    "react-native": "0.73.9"
+    "react-native": "0.73.9",
+    "react-native-safe-area-context": "^4.8.2",
+    "react-native-screens": "^4.0.0",
+    "react-native-vector-icons": "^10.3.0",
+    "react-native-webview": "^13.15.0",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
